--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,32 @@
 # Core dependencies
-fastapi==0.110.0
-uvicorn[standard]==0.27.1
-pydantic-settings==2.6.1
-python-multipart==0.0.9
+fastapi==0.115.12
+uvicorn[standard]==0.34.3
+pydantic-settings==2.9.1
+python-multipart==0.0.20
 
 # OpenAI and AI dependencies
-openai==1.86.0
-langchain==0.1.9
-langchain-openai==0.0.8
-sentence-transformers==2.5.1
-transformers==4.38.1
+openai==1.88.0
+langchain==0.3.25
+langchain-openai==0.3.23
+sentence-transformers==4.1.0
+transformers==4.52.4
 
 # Vector database
-qdrant-client==1.8.0
-pgvector==0.2.5
-psycopg2-binary==2.9.9
+qdrant-client==1.14.3
+pgvector==0.4.1
+psycopg2-binary==2.9.10
+
 
 # Database and ORM
-sqlalchemy==2.0.27
-alembic==1.13.1
-asyncpg==0.29.0
+sqlalchemy==2.0.41
+alembic==1.16.2
+asyncpg==0.30.0
 
 # Document processing
 PyPDF2==3.0.1
-pdfplumber==0.10.3
-python-docx==1.1.0
-unstructured==0.12.4
+pdfplumber==0.11.7
+python-docx==1.2.0
+unstructured==0.17.2
 
 # NLP and text processing
 spacy==3.7.4
@@ -35,22 +36,23 @@ nltk==3.8.1
 # Utilities
 python-dateutil==2.9.0
 pytz==2024.1
-redis==5.0.1
-celery==5.3.6
-python-jose[cryptography]==3.3.0
+redis==6.2.0
+celery==5.5.3
+python-jose[cryptography]==3.5.0
 passlib[bcrypt]==1.7.4
-httpx==0.26.0
+httpx==0.28.1
 
 # Development and testing
-pytest==8.0.1
-pytest-asyncio==0.23.5
-black==24.2.0
-ruff==0.2.2
-mypy==1.8.0
+pytest==8.4.0
+pytest-asyncio==1.0.0
+black==25.1.0
+ruff==0.11.13
+mypy==1.16.1
 
 # Monitoring and logging
-structlog==24.1.0
-sentry-sdk==1.40.6
+structlog==25.4.0
+sentry-sdk==2.30.0
 
 # Progress bars and utilities
-tqdm==4.66.2
+tqdm==4.67.1
+SQLModel==0.0.24
