refactor orchestrator to langchain

--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ QDRANT_HOST=qdrant
 QDRANT_PORT=6333
 
 # Application Configuration
-ENVIRONMENT=development
+ENVIRONMENT=production
 SECRET_KEY=your-secret-key-here
 
 # File Storage
