sn rulings collection: ingested and searched

--- a/.env
+++ b/.env
@@ -24,3 +24,6 @@ SECRET_KEY=your-secret-key-here
 UPLOAD_DIR=data/uploads
 EMBEDDINGS_DIR=data/embeddings
 CHUNKS_DIR=data/chunks
+
+REGISTRATION_SECRET_KEYS=owIuajZY6whxmUEga09eKtlLyBmnTSJi
+REGISTRATION_ENABLED=true
