--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ PyPDF2==3.0.1
 pdfplumber==0.11.7
 python-docx==1.2.0
 unstructured==0.17.2
+PyMuPDF==1.23.8
 
 # NLP and text processing
 spacy==3.7.4
@@ -41,6 +42,7 @@ celery==5.5.3
 python-jose[cryptography]==3.5.0
 passlib[bcrypt]==1.7.4
 httpx==0.28.1
+aiofiles==25.1.0
 
 # Development and testing
 pytest==8.4.0
@@ -57,3 +59,8 @@ sentry-sdk==2.30.0
 tqdm==4.67.1
 SQLModel==0.0.24
 debugpy==1.8.14
+
+# Added dependency
+email-validator>=2.0
+alembic>=1.16.2
+dateparser
