--- a/ui/package.json
+++ b/ui/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:debug": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev",
+    "dev:debug": "node --inspect=0.0.0.0:9229 node_modules/.bin/next dev",
     "dev:https": "node server.js",
     "dev:https:debug": "node --inspect=0.0.0.0:9229 server.js",
     "build": "next build",
@@ -13,26 +13,33 @@
     "generate-certs": "./generate-certificates.sh"
   },
   "dependencies": {
-    "next": "15.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.3",
     "@types/node": "22.10.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
-    "typescript": "^5.7.2",
-    "tailwindcss": "^3.4.17",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
+    "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.1.0",
-    "axios": "^1.7.9",
-    "clsx": "^2.1.1",
-    "react-hook-form": "^7.54.2",
-    "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.3"
+    "next": "15.1.0",
+    "postcss": "^8.4.49",
+    "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.54.2",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
   }
 }
