--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
 ]
 
 [tool.poetry]
+package-mode = false
 
 [tool.poetry.group.dev.dependencies]
 sqlalchemy = "^2.0.43"
@@ -25,6 +26,9 @@ pylint = "^3.3.8"
 mypy = "^1.17.1"
 basedpyright = "^1.31.3"
 pylance = "^0.34.0"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.4.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
