--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -12,5 +12,6 @@
     ".venv-tests",
     "alembic"
   ],
-  "reportAttributeAccessIssue": "information"
+  "reportAttributeAccessIssue": "information",
+  "extraPaths": ["."]
 }
