--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "python.venvPath": "${workspaceFolder}/.venv",
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
-    "python.languageServer": "Pylance",
+    "python.languageServer": "None",
     "python.analysis.diagnosticMode": "workspace",
     "[python]": {
         "diffEditor.ignoreTrimWhitespace": false,
