--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,3 +55,14 @@ qdrant-client = "1.15.1"
 types-redis = "4.6.0.11"
 types-requests = "2.31.0.10"
 
+[tool.poetry.group.rag]
+optional = true
+
+[tool.poetry.group.rag.dependencies]
+# MCP server + ingestion utilities for web RAG
+mcp = "^1.1.1"
+httpx = "^0.27.2"
+trafilatura = "^1.12.2"
+numpy = "^2.1.1"
+pyyaml = "^6.0.2"
+tqdm = "^4.66.4"
